<resources>
    <string name="app_name">MobileGoalTracker</string>

    <string name="greeting"> Good morning Jane</string>
    <string name="planning"> Planning</string>
    <string name="performance">Performance</string>
    <string name="workouts">Manage Workouts</string>

    <string name="current">Current</string>
    <string name="lastWeek">Last Week</string>
    <string name="lastMonth">Last Month</string>
    <string name="lastThreeWorkouts">Your last three workouts</string>

    <string name="goalInput">Choose your power Goal</string>


   </resources>