<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:background="@drawable/rounded_corner_view"
        android:gravity="center"
        android:text="@string/greeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="271dp"
        android:layout_height="193dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        app:layout_constraintVertical_bias="0.3">

        <Button
            android:id="@+id/btnPlanning"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/btnMainActivity"
            android:text="@string/planning"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnPerformance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/btnMainActivity"
            android:text="@string/performance"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnWorkouts"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/btnMainActivity"
            android:text="@string/workouts"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>