<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Performance">

    <ImageButton
        android:id="@+id/imgBtnReturnFromPerformance"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewPerformance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_20" />

    <TextView
        android:id="@+id/textViewPerformance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/performance"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="354dp"
        android:layout_height="151dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPerformance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCurrent"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/current"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewLastWeek"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lastWeek"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewLastMonth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lastMonth"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBarCurrent"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:progressTint="#43A047" />

            <ProgressBar
                android:id="@+id/progressBarLastWeek"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ProgressBar
                android:id="@+id/progressBarLastMonth"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="330dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textViewLastThreeWorkouts"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@color/btnMainActivity"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/lastThreeWorkouts"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <ListView
            android:id="@+id/listLastWorkouts"
            android:layout_width="match_parent"
            android:layout_height="203dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>